<resources>
    <string name="app_name">Personal Warehouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Personal Warehouse</string>
    <string name="nav_header_subtitle">Find your items instantly</string>
    <string name="nav_header_autore">by G.Claudio</string>
    <string name="nav_header_email">gc.decapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">My Items</string>
    <string name="title_activity_categorie">Categories</string>
    <string name="title_activity_stanze">Rooms</string>
    <string name="title_activity_mobili">Furniture</string>
    <string name="title_activity_contenitori">Container</string>
    <string name="title_activity_contenitori__dettaglio">Container_ActivityDetail</string>
    <string name="title_activity_mobili__dettaglio">Furniture_ActivityDetail</string>
    <string name="title_activity_stanze__dettaglio">Rooms_ActivityDetail</string>
    <string name="title_activity_oggetti">My Items</string>
    <string name="title_activity_oggetti_scadenza">My Expiring Items</string>


    <!-- Generale -->
    <string name="aggiungi">Add</string>
    <string name="modifica">Modify</string>
    <string name="elimina">Delete</string>
    <string name="annulla">Undo</string>
    <string name="conferma">Ok</string>
    <string name="errore">An error has occurred</string>
    <string name="operazione_successo">Operation completed successfully</string>
    <string name="eliminazione_successo">Deletion successful</string>
    <string name="search_query_hint">Search</string>

    <string name="elimina_ma_mantieni_contenuto">Delete it, but keep its content</string>
    <string name="elimina_insieme_al_contenuto">Delete it and its content</string>

    <string name="mobili">Furniture</string>
    <string name="contenitori">Containers</string>
    <string name="oggetti">Items</string>
    <string name="descrizione">Description</string>

    <string name="errore_nome">Name not valid</string>
    <string name="errore_nome_in_uso">Name not unique</string>
    <string name="errore_campi_obbligatori">All fields are mandatory</string>

    <!-- Categorie -->
    <string name="categoria_nessuna">- No Categories -</string>
    <string name="categoria_nome">Category Name</string>
    <string name="categoria_modifica">Modify Category</string>
    <string name="categoria_nuova">New Category</string>

    <!-- Stanze -->
    <string name="stanza_nome">Room Name</string>
    <string name="stanza_modifica">Modify Room</string>
    <string name="stanza_nuovo">New Room</string>
    <string name="stanza_devi_creare_prima">You must create your first room</string>
    <string name="stanza_errore_non_vuota">Impossible to delete room: you must empty it to proceed</string>

    <!-- Mobili -->
    <string name="mobile_nessuno">- No Furniture -</string>
    <string name="mobile_nome">Furniture Name</string>
    <string name="mobile_modifica">Modify Furniture</string>
    <string name="mobile_nuovo">New Furniture</string>
    <string name="mobile_non_vuoto">Selected furniture is not empty. How do you want to proceed?</string>

    <!-- Contenitori -->
    <string name="contenitore_nessuno">- No Container -</string>
    <string name="contenitore_nome">Container Name</string>
    <string name="contenitore_modifica">Modify Container</string>
    <string name="contenitore_nuovo">New Container</string>
    <string name="contenitore_eredita_categoria">Apply the same category to all the objects contained</string>
    <string name="contenitore_non_vuoto">Selected container is not empty. How do you want to proceed?</string>

    <!-- Oggetti -->
    <string name="oggetto_nome">Item Name</string>
    <string name="oggetto_modifica">Modify Item</string>
    <string name="oggetto_nuovo">New Item</string>
    <string name="oggetto_quantita">(Quantity: XX)</string>
    <string name="oggetto_seleziona_quantita">Quantity</string>
    <string name="oggetto_scadenza">Expiration Date</string>
    <string name="oggetto_scadenza_breve">Exp. Date</string>
    <string name="oggetto_in_scadenza">Do you have any expiring items</string>



    <!-- Gestione database -->
    <string name="database_utility">Database Tools</string>
    <string name="database_backup">Create a Backup File</string>
    <string name="database_restore">Restore from the Backup File</string>
    <string name="database_delete">Delete old Backup Files</string>
    <string name="database_delete_conferma">Warning: all backup files will be deleted. Proceed?</string>
    <string name="database_seleziona_file">Select the Backup File</string>
    <string name="database_seleziona_file_conferma">Do you want to restore this file?</string>
    <string name="database_restore_no_file">There are no backup files to restore</string>
    <string name="errore_memoria_esterna">External memory is not available</string>

    <!-- Extra -->
    <string name="invite_friend">Recommend to a friend</string>
    <string name="try_it">Try this App!</string>
    <string name="share">Share</string>

</resources>

