<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/nav_stanze"
            android:icon="@drawable/nav_stanze2"
            android:title="@string/title_activity_stanze" />
        <item
            android:id="@+id/nav_mobili"
            android:icon="@drawable/nav_mobili"
            android:title="@string/title_activity_mobili" />
        <item
            android:id="@+id/nav_contenitori"
            android:icon="@drawable/nav_contenitori"
            android:title="@string/title_activity_contenitori" />
        <item
            android:id="@+id/nav_categorie"
            android:icon="@drawable/nav_categorie"
            android:title="@string/title_activity_categorie" />
    </group>

    <item android:title="Utility">
        <menu>
            <item
                android:id="@+id/nav_database"
                android:icon="@drawable/nav_categorie"
                android:title="Database Utility" />
        </menu>
    </item>
</menu>
