<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nomeContenitore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/categoria_nome"
        android:ems="10"
        android:hint="@string/contenitore_nome"
        android:maxLength="25"
        android:minHeight="48dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descrizione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/descrizione"
        android:inputType="textMultiLine"
        android:maxLength="80"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeContenitore" />

    <TableLayout
        android:id="@+id/bottomLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrizione">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="6">

            <Spinner
                android:id="@+id/elencoStanze"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="5" />


            <ImageView
                android:id="@+id/addStanzaButton"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/stanza_nuovo"
                app:srcCompat="@drawable/ic_menu_send" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="6">

            <Spinner
                android:id="@+id/elencoMobili"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="5" />


            <ImageView
                android:id="@+id/addMobileButton"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/stanza_nuovo"
                app:srcCompat="@drawable/ic_menu_send" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="6">

            <Spinner
                android:id="@+id/elencoCategorie"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="5" />


            <ImageView
                android:id="@+id/addCategoriaButton"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/stanza_nuovo"
                app:srcCompat="@drawable/ic_menu_send" />

        </TableRow>

    </TableLayout>


    <CheckBox
        android:id="@+id/checkEstendiCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/contenitore_eredita_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomLayout" />

</android.support.constraint.ConstraintLayout>